--- a/index.html
+++ b/index.html
@@ -15,13 +15,22 @@
 
         <!-- form starts here -->
 
-      <div class="infoInput">
+      <div id="infoInput">
         <form>
+          <div class="form-group">
+            <label for="family">How will you be traveling?</label>
+            <select id="family" class="form-control">
+              <option value='alone'>Alone, I'm trying to get laid.</option>
+              <option value='friend'>With a friend or partner, I'm also trying to get laid.</option>
+              <option value='kids'>With my children, I just want them to entertain themselves</option>
+            </select>
+          </div>
+
           <div class="form-group">
             <label for="excitement">Pick your ideal activity</label>
             <select id="excitement" class="form-control">
               <option value="beach">A day at the beach reading a book, and totally ignoring the beach you spend a thousand dollars to get to.</option>
-              <option value="party">Up in the club with strangers who probably wouldn't like you even if you could hear each other..</option>
+              <option value="party">Up in the club with strangers who probably wouldn't like you even if you could hear each other.</option>
               <option value="stayhome">Watching a movie, curled up on the couch with that special someone you pretend you still have feelings for.</option>
             </select>
           </div>
@@ -29,8 +38,11 @@
           <div class="form-group">
             <label for="age">Enter your age</label>
             <input id="age" class="form-control" placeholder="Like we care.">
-            </input>
           </div>
+
+          <!--submit button-->
+
+          <button class="btn btn-primary btn-lg" type="submit">Submit and see result!</button>
         </form>
       </div>
     <div>
