--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
           <div class="form-group">
             <label for="excitement">Pick your ideal activity</label>
             <select id="excitement" class="form-control">
-              <option value="beach">A day at the beach reading a book, and totally ignoring the beach you spend a thousand dollars to get to.</option>
-              <option value="party">Up in the club with strangers who probably wouldn't like you even if you could hear each other.</option>
-              <option value="stayhome">Watching a movie, curled up on the couch with that special someone you pretend you still have feelings for.</option>
+              <option value='beach'>A day at the beach reading a book, and totally ignoring the beach you spend a thousand dollars to get to.</option>
+              <option value='party'>Up in the club with strangers who probably wouldn't like you even if you could hear each other.</option>
+              <option value='stayhome'>Watching a movie, curled up on the couch with that special someone you pretend you still have feelings for.</option>
             </select>
           </div>
 
