change value of inputs back to strings

--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
           <div class="form-group">
             <label for="family">How will you be traveling?</label>
             <select id="family" class="form-control">
-              <option value='1'>Alone, I'm trying to get laid.</option>
-              <option value='2'>With a friend or partner, I'm also trying to get laid.</option>
-              <option value='3'>With my children, I just want them to entertain themselves</option>
+              <option value='alone'>Alone, I'm trying to get laid.</option>
+              <option value='friend'>With a friend or partner, I'm also trying to get laid.</option>
+              <option value='kids'>With my children, I just want them to entertain themselves</option>
             </select>
           </div>
 
           <div class="form-group">
             <label for="excitement">Pick your ideal activity</label>
             <select id="excitement" class="form-control">
-              <option value='1'>A day at the beach reading a book, and totally ignoring the beach you spend a thousand dollars to get to.</option>
-              <option value='2'>Up in the club with strangers who probably wouldn't like you even if you could hear each other.</option>
-              <option value='3'>Watching a movie, curled up on the couch with that special someone you pretend you still have feelings for.</option>
+              <option value='beach'>A day at the beach reading a book, and totally ignoring the beach you spend a thousand dollars to get to.</option>
+              <option value='party'>Up in the club with strangers who probably wouldn't like you even if you could hear each other.</option>
+              <option value='stayhome'>Watching a movie, curled up on the couch with that special someone you pretend you still have feelings for.</option>
             </select>
           </div>
 
